objects/Pradeep_Address__c.object
<CustomObject>
    <fields>
        <fullName>Add_ID__c</fullName>
        <label>Add_ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>